@@ -2,9 +2,9 @@
 <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG April 1999//EN" "http://www.w3.org/Graphics/SVG/svg-19990412.dtd">
 <svg width="800px" height="800px">
   <desc>This sample SVG file draws a flower</desc>
-  <g style="transform: matrix(1 0 0 -1 -25.88 798.60); stroke: #000; stroke-width: 1">
-    <path style="fill: #1A5466" d="m 242.33 684.19 C 346.44 757.48 271.45 647.38 213.17 641.37 C 271.45 647.38 383.43 575.21 256.71 613.30 C 383.43 575.21 251.04 565.90 205.23 609.68 C 251.04 565.90 265.13 432.88 210.71 557.95 C 265.13 432.88 175.04 531.37 175.67 596.26 C 175.04 531.37 80.63 437.67 138.96 559.82 C 80.63 437.67 100.67 569.80 146.75 611.20 C 100.67 569.80 -31.14 585.98 95.49 617.49 C -31.14 585.98 83.94 652.25 140.24 643.26 C 83.94 652.25 13.98 766.12 113.04 687.55 C 13.98 766.12 137.45 716.63 161.05 668.30 C 137.45 716.63 182.02 842.45 178.39 717.23 C 182.02 842.45 220.90 714.46 193.51 667.46 C 220.90 714.46 346.44 757.48 242.33 684.19 z"/>
-    <path style="fill: #34AACD" d="M 235.33 691.19 C 339.44 764.48 264.45 654.38 206.17 648.37 C 264.45 654.38 376.43 582.21 249.71 620.30 C 376.43 582.21 244.04 572.90 198.23 616.68 C 244.04 572.90 258.13 439.88 203.71 564.95 C 258.13 439.88 168.04 538.37 168.67 603.26 C 168.04 538.37 73.63 444.67 131.96 566.82 C 73.63 444.67 93.67 576.80 139.75 618.20 C 93.67 576.80 -38.14 592.98 88.49 624.49 C -38.14 592.98 76.94 659.25 133.24 650.26 C 76.94 659.25 6.98 773.12 106.04 694.55 C 6.98 773.12 130.45 723.63 154.05 675.30 C 130.45 723.63 175.02 849.45 171.39 724.23 C 175.02 849.45 213.90 721.46 186.51 674.46 C 213.90 721.46 339.44 764.48 235.33 691.19 z"/>
-    <path style="fill: #F881BF" d="M 199.44 634.43 C 199.44 622.16 189.19 612.21 176.54 612.21 C 163.89 612.21 153.63 622.16 153.63 634.43 C 153.63 646.71 163.89 656.66 176.54 656.66 C 189.19 656.66 199.44 646.71 199.44 634.43 z"/>
+  <g style="transform: matrix(1 0 0 -1 -25.88 798.60);       stroke: #000; stroke-width: 1">
+    <path style="fill: #1A5466" d="m 242.33 684.19            C 346.44 757.48 271.45 647.38 213.17 641.37            C 271.45 647.38 383.43 575.21 256.71 613.30            C 383.43 575.21 251.04 565.90 205.23 609.68            C 251.04 565.90 265.13 432.88 210.71 557.95            C 265.13 432.88 175.04 531.37 175.67 596.26            C 175.04 531.37 80.63  437.67 138.96 559.82            C  80.63 437.67 100.67 569.80 146.75 611.20            C 100.67 569.80 -31.14 585.98 95.49  617.49            C -31.14 585.98 83.94  652.25 140.24 643.26            C 83.94  652.25 13.98  766.12 113.04 687.55            C 13.98  766.12 137.45 716.63 161.05 668.30            C 137.45 716.63 182.02 842.45 178.39 717.23            C 182.02 842.45 220.90 714.46 193.51 667.46            C 220.90 714.46 346.44 757.48 242.33 684.19 z"/>
+    <path style="fill: #34AACD" d="M 235.33 691.19            C 339.44 764.48 264.45 654.38 206.17 648.37            C 264.45 654.38 376.43 582.21 249.71 620.30            C 376.43 582.21 244.04 572.90 198.23 616.68            C 244.04 572.90 258.13 439.88 203.71 564.95            C 258.13 439.88 168.04 538.37 168.67 603.26            C 168.04 538.37 73.63  444.67 131.96 566.82            C 73.63  444.67 93.67  576.80 139.75 618.20            C 93.67  576.80 -38.14 592.98  88.49 624.49            C -38.14 592.98 76.94  659.25 133.24 650.26            C 76.94  659.25 6.98   773.12 106.04 694.55            C 6.98   773.12 130.45 723.63 154.05 675.30            C 130.45 723.63 175.02 849.45 171.39 724.23            C 175.02 849.45 213.90 721.46 186.51 674.46            C 213.90 721.46 339.44 764.48 235.33 691.19 z"/>
+    <path style="fill: #F881BF" d="M 199.44 634.43            C 199.44 622.16 189.19 612.21 176.54 612.21            C 163.89 612.21 153.63 622.16 153.63 634.43            C 153.63 646.71 163.89 656.66 176.54 656.66            C 189.19 656.66 199.44 646.71 199.44 634.43 z"/>
   </g>
 </svg>
