@@ -1,2 +1,2 @@
 <?xml version="1.0"?>
-<doc attr="to normalize with a space"/>
+<doc attr="to normalize   with a space"/>
